[gd_scene load_steps=20 format=2]

[ext_resource path="res://world_env.tres" type="Environment" id=1]
[ext_resource path="res://src/level_components/level.gd" type="Script" id=2]
[ext_resource path="res://src/ui/pause_menu/pause_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/ui/run_summary_page/run_summary_page.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/level_components/range_thresholds/range_threshold.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/level_ui/level_ui.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/camera_systems/level_camera/level_cam_sys.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/level_components/environment/shipping_container/shipping_container.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/level_components/targets/popup_target/popup_target.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/actor/player/player.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/level_components/environment/wood_stuff/crate_medium.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/level_components/floor_mats/concrete_floor_16x16.material" type="Material" id=13]
[ext_resource path="res://src/level_components/level_sub_managers/bullet_manager.gd" type="Script" id=17]
[ext_resource path="res://src/level_components/level_sub_managers/target_manager.gd" type="Script" id=18]
[ext_resource path="res://src/level_components/level_sub_managers/badge_tracker.gd" type="Script" id=19]
[ext_resource path="res://raw_assets/sfx/misc/run_end.ogg" type="AudioStream" id=20]
[ext_resource path="res://raw_assets/sfx/misc/run_start.ogg" type="AudioStream" id=21]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 24, 0.25, 32 )

[sub_resource type="PlaneMesh" id=3]
material = ExtResource( 13 )
size = Vector2( 16, 16 )

[node name="Level" type="Spatial"]
script = ExtResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( 0.888476, 0.255723, -0.381072, 0.0321007, 0.793698, 0.607464, 0.457799, -0.55195, 0.696973, 0, 11, 0 )
light_energy = 0.9
shadow_enabled = true

[node name="DirectionalLight2" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( -0.652816, 0.5138, -0.556633, 0.377354, 0.857723, 0.349162, 0.656837, 0.0178907, -0.75382, 0, 11, 0 )
light_color = Color( 1, 0.956863, 0.866667, 1 )
light_energy = 0.4

[node name="LevelUI" parent="." instance=ExtResource( 6 )]
layer = 0

[node name="PauseMenu" type="CanvasLayer" parent="."]
layer = 2

[node name="PauseMenu" parent="PauseMenu" instance=ExtResource( 3 )]
visible = false

[node name="RunSummaryPage" type="CanvasLayer" parent="."]

[node name="RunSummaryPage" parent="RunSummaryPage" instance=ExtResource( 4 )]
visible = false

[node name="LevelCameraSystem" parent="." instance=ExtResource( 7 )]

[node name="Player" parent="." instance=ExtResource( 10 )]
collision_mask = 21

[node name="RangeEntrance" parent="." instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3, 0, 4 )

[node name="RangeExit" parent="." instance=ExtResource( 5 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -13.7964, 0, 5.1855 )

[node name="StaticEnvironment" type="Node" parent="."]

[node name="Crates" type="Spatial" parent="StaticEnvironment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="CrateMedium" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.132464, 0, -0.991188, 0, 1, 0, 0.991188, 0, -0.132464, -7.49093, 0, 5.84591 )

[node name="CrateMedium2" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.99434, 0, 0.106247, 0, 1, 0, -0.106247, 0, 0.99434, -7.49093, 0, 6.97869 )

[node name="CrateMedium3" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.112197, 0, 0.993686, 0, 1, 0, -0.993686, 0, 0.112197, -7.49093, 0, 8.1137 )

[node name="CrateMedium7" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.991188, 0, -0.132464, 0, 1, 0, 0.132464, 0, 0.991188, -7.49093, 2, 5.84591 )

[node name="CrateMedium8" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.106247, 0, -0.99434, 0, 1, 0, 0.99434, 0, 0.106247, -7.49093, 2, 7.0045 )

[node name="CrateMedium9" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.993686, 0, 0.112197, 0, 1, 0, -0.112197, 0, -0.993686, -7.49093, 2, 8.1137 )

[node name="CrateMedium4" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.999133, 0, -0.0416314, 0, 1, 0, 0.0416314, 0, -0.999133, -7.49093, 1, 5.84591 )

[node name="CrateMedium5" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.999779, 0, -0.0210471, 0, 1, 0, 0.0210471, 0, 0.999779, -7.49093, 1, 6.97869 )

[node name="CrateMedium6" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.187879, 0, 0.982192, 0, 1, 0, -0.982192, 0, -0.187879, -7.49093, 1, 8.1137 )

[node name="CrateMedium10" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.132464, 0, 0.991188, 0, 1, 0, -0.991188, 0, 0.132464, -4.29491, 0, 20.1137 )

[node name="CrateMedium11" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.99434, 0, -0.106247, 0, 1, 0, 0.106247, 0, -0.99434, -4.29491, 0, 18.9809 )

[node name="CrateMedium12" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.112197, 0, -0.993686, 0, 1, 0, 0.993686, 0, -0.112197, -4.29491, 0, 17.8459 )

[node name="CrateMedium23" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.498276, 0, -0.867019, 0, 1, 0, 0.867019, 0, -0.498276, -9.02022, 0, 19.8656 )

[node name="CrateMedium24" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.899977, 0, -0.435938, 0, 1, 0, 0.435938, 0, -0.899977, -7.80078, 0, 19.4464 )

[node name="CrateMedium25" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.0172254, 0, -0.999852, 0, 1, 0, 0.999852, 0, -0.0172254, -14.1266, 0, 13.5398 )

[node name="CrateMedium26" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.447369, 0, -0.89435, 0, 1, 0, 0.89435, 0, -0.447369, -9.59183, 0, 9.65283 )

[node name="CrateMedium27" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.690618, 0, -0.72322, 0, 1, 0, 0.72322, 0, 0.690618, -11.4972, 0, 6.94721 )

[node name="CrateMedium28" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.84766, 0, -0.530541, 0, 1, 0, 0.530541, 0, 0.84766, -8.86778, 0, 13.1968 )

[node name="CrateMedium19" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.132464, 0, 0.991188, 0, 1, 0, -0.991188, 0, 0.132464, -12.4651, 0, 25.6574 )

[node name="CrateMedium20" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.99434, 0, -0.106247, 0, 1, 0, 0.106247, 0, -0.99434, -12.4651, 0, 24.5246 )

[node name="CrateMedium21" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.112197, 0, -0.993686, 0, 1, 0, 0.993686, 0, -0.112197, -12.4651, 0, 23.3896 )

[node name="CrateMedium22" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.0783896, 0, -0.996923, 0, 1, 0, 0.996923, 0, 0.0783896, -12.4651, 0, 22.2751 )

[node name="CrateMedium13" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.991188, 0, 0.132464, 0, 1, 0, -0.132464, 0, -0.991188, -4.29491, 2, 20.1137 )

[node name="CrateMedium14" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.106247, 0, 0.99434, 0, 1, 0, -0.99434, 0, -0.106247, -4.29491, 2, 18.9551 )

[node name="CrateMedium15" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.993686, 0, -0.112197, 0, 1, 0, 0.112197, 0, 0.993686, -4.29491, 2, 17.8459 )

[node name="CrateMedium16" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.999133, 0, 0.0416315, 0, 1, 0, -0.0416315, 0, 0.999133, -4.29491, 1, 20.1137 )

[node name="CrateMedium17" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( -0.999779, 0, 0.021047, 0, 1, 0, -0.021047, 0, -0.999779, -4.29491, 1, 18.9809 )

[node name="CrateMedium18" parent="StaticEnvironment/Crates" instance=ExtResource( 11 )]
transform = Transform( 0.187879, 0, -0.982192, 0, 1, 0, 0.982192, 0, 0.187879, -4.29491, 1, 17.8459 )

[node name="Floor" type="StaticBody" parent="StaticEnvironment" groups=["IMPACT_SOUND_CONCRETE"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19, 0, 4 )

[node name="CollisionShape" type="CollisionShape" parent="StaticEnvironment/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, -0.25, 24 )
shape = SubResource( 1 )

[node name="Section2" type="MeshInstance" parent="StaticEnvironment/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )
mesh = SubResource( 3 )

[node name="Section3" type="MeshInstance" parent="StaticEnvironment/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 0 )
mesh = SubResource( 3 )

[node name="Section5" type="MeshInstance" parent="StaticEnvironment/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 16 )
mesh = SubResource( 3 )

[node name="Section6" type="MeshInstance" parent="StaticEnvironment/Floor"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 16 )
mesh = SubResource( 3 )

[node name="ShippingContainers" type="Spatial" parent="StaticEnvironment"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="ShippingContainer30" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2, 0, -5 )

[node name="ShippingContainer38" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -2.66237e-07, 0, 1, 0, 2.66237e-07, 0, -1, -1, 0, 4 )

[node name="ShippingContainer31" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -4, 0, -5 )

[node name="ShippingContainer58" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.08792, 0, -0.219808 )

[node name="ShippingContainer59" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.08792, 0, -6.21981 )

[node name="ShippingContainer32" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -10, 0, -5 )

[node name="ShippingContainer36" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, 8.23374 )

[node name="ShippingContainer37" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, 14.2337 )

[node name="ShippingContainer57" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, 20.2337 )

[node name="ShippingContainer33" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -16, 0, -5 )

[node name="ShippingContainer34" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -22, 0, -5 )

[node name="ShippingContainer40" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -2.66237e-07, 0, 1, 0, 2.66237e-07, 0, -1, -16, 0, 4 )

[node name="ShippingContainer41" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 1.78814e-07, 0, 1, 0, -1.78814e-07, 0, 1, -10, 0, 4 )

[node name="ShippingContainer56" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 1.78814e-07, 0, 1, 0, -1.78814e-07, 0, 1, -5, 0, 10.0191 )

[node name="ShippingContainer61" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1.35103e-07, 0, -1, 0, 1, 0, 1, 0, 1.35103e-07, -3.60435, 0, 14.239 )

[node name="ShippingContainer39" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1.35103e-07, 0, -1, 0, 1, 0, 1, 0, 1.35103e-07, -17.7949, 0, 23.1853 )

[node name="ShippingContainer43" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1.35103e-07, 0, -1, 0, 1, 0, 1, 0, 1.35103e-07, -17.7949, 0, 11.1538 )

[node name="ShippingContainer44" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1.35103e-07, 0, -1, 0, 1, 0, 1, 0, 1.35103e-07, -17.7949, 0, 17.1538 )

[node name="ShippingContainer42" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -2.66237e-07, 0, 1, 0, 2.66237e-07, 0, -1, 5, 0, 4 )

[node name="ShippingContainer35" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -28, 0, -5 )

[node name="ShippingContainer45" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 5.96046e-08, 0, -1, 0, 1, 0, 1, 0, 5.96046e-08, -28, 0, -0.854191 )

[node name="ShippingContainer46" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 5.96046e-08, 0, -1, 0, 1, 0, 1, 0, 5.96046e-08, -28, 0, 5.14581 )

[node name="ShippingContainer47" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 5.96046e-08, 0, -1, 0, 1, 0, 1, 0, 5.96046e-08, -28, 0, 11.1458 )

[node name="ShippingContainer48" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 5.96046e-08, 0, -1, 0, 1, 0, 1, 0, 5.96046e-08, -28, 0, 17.1458 )

[node name="ShippingContainer49" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 5.96046e-08, 0, -1, 0, 1, 0, 1, 0, 5.96046e-08, -28, 0, 23.1458 )

[node name="ShippingContainer50" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 5.96046e-08, 0, -1, 0, 1, 0, 1, 0, 5.96046e-08, -28, 0, 29.1458 )

[node name="ShippingContainer51" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 1.03316e-07, 0, 1, 0, -1.03316e-07, 0, 1, -23.8605, 0, 27.4715 )

[node name="ShippingContainer52" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 1.03316e-07, 0, 1, 0, -1.03316e-07, 0, 1, -17.8605, 0, 27.4715 )

[node name="ShippingContainer53" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 1.03316e-07, 0, 1, 0, -1.03316e-07, 0, 1, -11.8605, 0, 27.4715 )

[node name="ShippingContainer54" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 1.03316e-07, 0, 1, 0, -1.03316e-07, 0, 1, -5.86048, 0, 27.4715 )

[node name="ShippingContainer55" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 1.03316e-07, 0, 1, 0, -1.03316e-07, 0, 1, 0.139523, 0, 27.4715 )

[node name="ShippingContainer60" parent="StaticEnvironment/ShippingContainers" instance=ExtResource( 8 )]
transform = Transform( -0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 1.87575, 0, 23.2957 )

[node name="TargetManager" type="Node" parent="."]
script = ExtResource( 18 )

[node name="PopupTarget1" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 1.47027e-07, 0, 1, 0, -1.47027e-07, 0, 1, 2.89195, 0, 13.1341 )

[node name="PopupTarget6" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 4.52488, 2.7, 25.401 )
_move_distance = 5.0

[node name="PopupTarget4" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 1.47027e-07, 0, 1, 0, -1.47027e-07, 0, 1, 6.89195, 0, 16.1341 )

[node name="PopupTarget5" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 0.770613, 0, 0.637303, 0, 1, 0, -0.637303, 0, 0.770613, 7.55544, 0, 19.4496 )
is_enemy = false

[node name="PopupTarget7" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.08745, 2.7, 26.4004 )
is_enemy = false

[node name="PopupTarget8" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, -4.13999, 2.7, 26.8942 )

[node name="PopupTarget2" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -1.90738e-07, 0, 1, 0, 1, 0, -1, 0, -1.90738e-07, 6.89195, 0, 6.13414 )

[node name="PopupTarget3" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -1.90738e-07, 0, 1, 0, 1, 0, -1, 0, -1.90738e-07, 6.89195, 0, 7.65994 )

[node name="PopupTarget9" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -2.3445e-07, 0, 1, 0, 2.3445e-07, 0, -1, -3.09173, 0, 13.1435 )

[node name="PopupTarget15" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -0.884263, 0, -0.466989, 0, 1, 0, 0.466989, 0, -0.884263, -9.05913, 0, 15.5209 )

[node name="PopupTarget21" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -0.884263, 0, -0.466989, 0, 1, 0, 0.466989, 0, -0.884263, -11.2694, 0, 14.7968 )

[node name="PopupTarget16" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -0.884263, 0, -0.466989, 0, 1, 0, 0.466989, 0, -0.884263, -6.46561, 0, 11.7987 )

[node name="PopupTarget17" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -0.884263, 0, -0.466989, 0, 1, 0, 0.466989, 0, -0.884263, -11.2444, 0, 10.8141 )
is_enemy = false

[node name="PopupTarget18" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -0.947952, 0, -0.318414, 0, 1, 0, 0.318414, 0, -0.947952, -7.6423, 0, 8.70088 )
is_enemy = false

[node name="PopupTarget19" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -0.995818, 0, -0.0913628, 0, 1, 0, 0.0913628, 0, -0.995818, -5.69716, 0, 7.26004 )

[node name="PopupTarget20" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -0.995818, 0, -0.0913628, 0, 1, 0, 0.0913628, 0, -0.995818, -9.10716, 0, 6.73173 )

[node name="PopupTarget11" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -2.3445e-07, 0, 1, 0, 2.3445e-07, 0, -1, -2.28786, 0, 14.4266 )
is_enemy = false

[node name="PopupTarget10" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( -1, 0, -2.3445e-07, 0, 1, 0, 2.3445e-07, 0, -1, -1.56594, 0, 13.1435 )

[node name="PopupTarget12" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 2.78161e-07, 0, -1, 0, 1, 0, 1, 0, 2.78161e-07, -11.1528, 0, 25.0761 )
_move_distance = -3.5

[node name="PopupTarget13" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 2.78161e-07, 0, -1, 0, 1, 0, 1, 0, 2.78161e-07, -9.40613, 0, 22.95 )
is_enemy = false

[node name="PopupTarget14" parent="TargetManager" instance=ExtResource( 9 )]
transform = Transform( 2.78161e-07, 0, -1, 0, 1, 0, 1, 0, 2.78161e-07, -9.40613, 0, 25.2214 )
is_enemy = false

[node name="BulletManager" type="Node" parent="."]
script = ExtResource( 17 )

[node name="BadgeTracker" type="Node" parent="."]
script = ExtResource( 19 )

[node name="AudioStreamRunStart" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 21 )
bus = "SoundEffects"

[node name="AudioStreamRunEnd" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 20 )
bus = "SoundEffects"

[connection signal="player_passed_through" from="RangeEntrance" to="." method="_on_player_passed_through_range_entrance"]
[connection signal="player_passed_through" from="RangeExit" to="." method="_on_player_passed_through_range_exit"]
